# maia-vectordb

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.claude/agents/: cto-agent.md  qa-agent.md  tech-lead-agent.md
.github/workflows/: ci.yml
alembic/: README  env.py
alembic/versions/: 5e4cb5abbe73_create_vector_stores_files_file_chunks_.py  (+3 more)
docs/: API.md  ARCHITECTURE-NOTES.md  DEPLOYMENT.md  DEVELOPMENT.md  DOCUMENTATION-REVIEW.md  REVIEW-TASK-1.md  REVIEW-TASK-2.md  REVIEW-TASK-3.md  REVIEW-TASK-4.md  REVIEW-TASK-5.md  REVIEW-TASK-ASYNC-EMBEDDING.md  REVIEW-TASK-DATABASE.md  REVIEW-TASK-EMBEDDING-PROVIDER.md  REVIEW-TASK-ERROR-HANDLING.md  REVIEW-TASK-FILE-UPLOAD.md  REVIEW-TASK-HEALTH-OPENAPI.md  REVIEW-TASK-SCHEMA-HARDENING.md  REVIEW-TASK-SEARCH.md  REVIEW-TASK-TEST-SUITE.md  REVIEW-TASK-VECTOR-STORE-CRUD.md  SETUP.md  STRUCTURED-CSV.md
examples/: ask_any_provider.py  maia_tool.py  setup_knowledge_base.py
tests/: conftest.py  conftest_integration.py  test_auth.py  test_background_processing.py  test_chunking.py  test_embedding.py  test_embedding_client.py  test_embedding_provider.py  test_error_handling.py  test_file_upload.py  test_health.py  test_integration.py  test_integration_db.py  test_middleware_edge_cases.py  test_models.py  test_rate_limiting_and_metrics.py  test_schema_edge_cases.py  test_schemas.py  test_search.py  test_vector_store_crud.py  test_vector_store_service.py
(+74 files in other folders)
